@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-19T08:15:36Z",
-  "count_outdated" : 269,
-  "uniques_outdated" : 135,
-  "count" : 311,
-  "uniques" : 162,
+  "timestamp" : "2022-05-19T16:35:30Z",
+  "count_outdated" : 270,
+  "uniques_outdated" : 136,
+  "count" : 312,
+  "uniques" : 163,
   "clones" : [
-    {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 11,
@@ -98,10 +91,10 @@
     },
     {
       "timestamp": "2022-05-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
