@@ -3,11 +3,6 @@
   "uniques": 14,
   "clones": [
     {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 11,
       "uniques": 8
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2022-05-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
