@@ -1,3 +1,10 @@
+2022-05-19T16:35:30Z:
+* notice: last 14d: unq all: 14 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 135 269 / 162 311
+* notice: next accum: outdated-unq outdated-all / unq all: 136 270 / 163 312
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: changed dates: [2022-05-19]
+
 2022-05-19T08:15:36Z:
 * notice: last 14d: unq all: 14 42
 * notice: prev accum: outdated-unq outdated-all / unq all: 135 269 / 161 310
